@@ -14,9 +14,9 @@
 #   limitations under the License.
 
 # returns a list of paths
-generatePath <- function(from, to, all, free, 
-	arrows, start, name, description,
-	boundMax, boundMin, ciUpper, ciLower) {
+generatePath <- function(from, to, 
+		all, arrows, values, free,
+		labels, lbound, ubound) {
 		if (single.na(to)) {
 			to <- from
 		}
@@ -25,29 +25,24 @@ generatePath <- function(from, to, all, free,
 		if (all) {
 			from <- rep(from, each=length(to))	
 		}
-		result <- suppressWarnings(mapply(generateSinglePath, from, to,
-					free, arrows, start, 
-					name, description, boundMax,
-					boundMin, ciUpper, ciLower, SIMPLIFY = FALSE))
+		result <- suppressWarnings(mapply(generateSinglePath, from, to, 
+		arrows, values, free,
+		labels, lbound, ubound, SIMPLIFY = FALSE))
 		return(result)
 }
 
-generateSinglePath <- function(from, to, free, 
-	arrows, start, name, description, 
-	boundMax, boundMin,
-	ciUpper, ciLower) {
+generateSinglePath <- function(from, to, 
+		arrows, values, free,
+		labels, lbound, ubound) {
 	result <- list()
 	result[['from']] <- from
 	result[['to']] <- to
-	result[['free']] <- free[[1]]
 	result[['arrows']] <- arrows[[1]]
-	result[['start']] <- start[[1]]
-	result[['name']] <- name[[1]]
-	result[['description']] <- description[[1]]	
-	result[['boundMax']] <- boundMax[[1]]
-	result[['boundMin']] <- boundMin[[1]]
-	result[['ciUpper']] <- ciUpper[[1]]
-	result[['ciLower']] <- ciLower[[1]]
+	result[['values']] <- values[[1]]	
+	result[['free']] <- free[[1]]
+	result[['labels']] <- labels[[1]]	
+	result[['lbound']] <- lbound[[1]]
+	result[['ubound']] <- ubound[[1]]
 	return(result)
 }
 
@@ -58,19 +53,13 @@ omxIsPath <- function(value) {
 }
 
 
-mxPath <- function(from, to = NA, all = FALSE, free = TRUE, 
-	arrows = 1, start = NA, name = NA, description = NA, 
-	boundMax = NA, boundMin = NA,
-	ciUpper = NA, ciLower = NA) {
-	if (length(start) == 1 && is.na(start)) start <- NULL
-	if (length(name) == 1 && is.na(name)) name <- NULL
-	if (length(description) == 1 && is.na(description)) description <- NULL
-	if (length(boundMax) == 1 && is.na(boundMax)) boundMax <- NULL
-	if (length(boundMin) == 1 && is.na(boundMin)) boundMin <- NULL
-	if (length(ciUpper) == 1 && is.na(ciUpper)) ciUpper <- NULL
-	if (length(ciLower) == 1 && is.na(ciLower)) ciLower <- NULL
-	generatePath(from, to, all, free, 
-		arrows, start, name, 
-		description, boundMax,
-		boundMin, ciUpper, ciLower)
+mxPath <- function(from, to = NA, all = FALSE, arrows = 1, values = NA,
+	free = TRUE, labels = NA, lbound = NA, ubound = NA) {
+	if (length(values) == 1 && is.na(values)) values <- NULL
+	if (length(labels) == 1 && is.na(labels)) labels <- NULL
+	if (length(lbound) == 1 && is.na(lbound)) lbound <- NULL
+	if (length(ubound) == 1 && is.na(ubound)) ubound <- NULL
+	generatePath(from, to, all, arrows, 
+		values, free, labels, 
+		lbound, ubound)
 }
